# Courses

./: .gitignore
HelloWord-CMake/: CMakeLists.txt  main.c
HelloWord-CMake/01-basics/: C1.c  C2.c  C3.c  C4.c  C5.c  C6.c  CMakeLists.txt  GCD.c  H1.c  H2.c  H3.c  H5.c  STR.c  StackArray.c  StackVariables.c
HelloWord-CMake/02-functions/: CMakeLists.txt  PrintF.c  SafeRead.c
HelloWord-CMake/03-struct/: CMakeLists.txt  main.c  person.c  person.h
HelloWord-CMake/04-memory/: CMakeLists.txt  Matrix.c  Matrix.h  MatrixMain.c  Vector.c  Vector.h  VectorMain.c
HelloWord-CMake/05-sort/: CMakeLists.txt  Sort.h  Sort_Bubble.c  Sort_Main.c  Sort_Natural_Merge.c  Sort_Quick.c  Sort_Selection.c  Sort_Shaker.c
HelloWord-CMake/ds-comparison/: CMakeLists.txt  Main_tree.c
HelloWord-CMake/libutils/: CMakeLists.txt
HelloWord-CMake/libutils/include/libutils/: List.h  Sort.h  Tree.h
HelloWord-CMake/libutils/src/: List.c  Sort_Bubble.c  Sort_Natural_Merge.c  Sort_Quick.c  Sort_Selection.c  Sort_Shaker.c  Three.c  Tree.c
HelloWord-CMake/list-comparison/: CMakeLists.txt  List_Main.c
HelloWord-CMake/outdated/01-basics/: C2.c  C5.c  H1.c  H5.c  H7.c  StackArray.c
HelloWord-CMake/outdated/02-functions/: CMakeLists.txt  PrintF.c  PrintF1.c  RecursiveSearch.c
HelloWord-CMake/outdated/03-struct/: CMakeLists.txt  person.c
HelloWord-CMake/outdated/04-memory/: CMakeLists.txt  Int.c  Matrix.h  MatrixMain.c  Vector.c  Vector.h
HelloWord-CMake/sort-comparison/: CMakeLists.txt  Sort_Main.c
HelloWord-Sln/HelloWord/: HelloWord.vcxproj  main.c
