cmake_minimum_required(VERSION 3.8)

#add_executable(StackVariables "StackVariables.c")
#add_executable(StackArray "StackArray.c")
#add_executable(C1 "C1.c")
#add_executable(H1 "H1.c")
#add_executable(C2 "C2.c")
#add_executable(C3 "C3.c")
#add_executable(C4 "C4.c")
add_executable(C6 "C6.c")
#add_executable(H2 "H2.c")
#add_executable(C5 "C5.c")
#add_executable(H3 "H3.c")
#add_executable(H5 "H5.c")
#add_executable(H7 "H7.c")
#add_executable(GCD "GCD.c")
#add_executable(STR "STR.c")


